ipfs/ipfs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipfs
  namespace: dataspace
spec:
  ingressClassName: nginx
  rules:
    - host: ipfs.local
      http:
        paths:
          - backend:
              service:
                name: ipfs
                port:
                  number: 8080
            path: /
            pathType: Prefix
